finish-Profile-Pic

--- a/index.html
+++ b/index.html
@@ -14,5 +14,6 @@
   </head>
   <body id="root">
     <script type="module" src="/src/body.jsx"></script>
+    <img src="" alt="img" />
   </body>
 </html>
