--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portifólio Suptitz</title>
   </head>
-  <body id="root">
+  <body>
+    <section id="root"></section>
     <script type="module" src="/src/body.jsx"></script>
-    <img src="" alt="img" />
   </body>
 </html>
